EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==11/14/2008
seveianrex: Adjusted Coat of Thistles AA modifier.
seveianrex: Implemented Pet Crits for NEC/MAG/BST (Deaths Fury, Elemental Fury, Warders Fury GoD era AAs)
Derision: Bazaar Trader mode (not Barter). Please test it well.
Derision: Updated OP_ShopDelItem for Titanium.

REQUIRED SQL:

DROP TABLE IF EXISTS `trader`;
CREATE TABLE `trader` (
  `char_id` int(10) unsigned NOT NULL default '0',
  `item_id` int(10) unsigned NOT NULL default '0',
  `serialnumber` int(10) unsigned NOT NULL default '0',
  `charges` int(11) NOT NULL default '0',
  `item_cost` int(10) unsigned NOT NULL default '0',
  `slot_id` tinyint(3) unsigned NOT NULL default '0',
  PRIMARY KEY  (`char_id`,`slot_id`)
) ENGINE=MyISAM DEFAULT CHARSET=utf8;

DROP TABLE IF EXISTS `trader_audit`;
CREATE TABLE `trader_audit` (
  `time` datetime NOT NULL,
  `seller` varchar(64) NOT NULL,
  `buyer` varchar(64) NOT NULL,
  `itemname` varchar(64) NOT NULL,
  `quantity` int(11) NOT NULL,
  `totalcost` int(11) NOT NULL
) ENGINE=MyISAM DEFAULT CHARSET=utf8;

UPDATE doors set opentype=155 where opentype=154 and zone='bazaar';

==11/12/2008
Congdar: Bots: add command #bot lore - Casts Identify on the item on your mouse pointer
seveianrex: Tweaked the Slay Undead damage to once again. Damage should be in-line with live numbers now.
Angelox: (Kobaz): Fix for 'PIC register bx clobbered in asm' error
Angelox: Improved filtering on [bot track rare] option for Ranger
Angelox: Added option [bot track near] for Ranger

==11/11/2008
Congdar: Bots: fix ghosting when runnning up to targets

==11/10/2008
Trevius/Derision: Fix for GM Training Point exploit when de-leveling and leveling up again

==11/10/2008
Derision: Implemented Looking For Group/Looking For Players Window. patch_Titanium_conf has been updated.
Derision: Visual Studio users should add world/lfplist.h and world/lfplist.cpp to their project.
