@@ -1,6 +1,12 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 
+==11/15/2008
+Derision: Using Find Trader in the Bazaar will teleport you to the Trader.
+Derision: Added Rule Bazaar:EnableWarpToTrader, default true.
+Derision: Added Rule World:TutorialZoneID, default 189 (tutorialb).
+Derision: MinPrice/MaxPrice in the Bazaar search window are now interpreted correctly as values in Platinum.
+
 ==11/14/2008
 seveianrex: Adjusted Coat of Thistles AA modifier.
 seveianrex: Implemented Pet Crits for NEC/MAG/BST (Deaths Fury, Elemental Fury, Warders Fury GoD era AAs)
